Fix broken link

--- a/hypothesis/presentation.slides.html
+++ b/hypothesis/presentation.slides.html
@@ -13478,7 +13478,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="https://66.media.tumblr.com/tumblr_lztw2xSrIy1qf5rll.gif" style="width:80%;margin-left:auto;margin-right:auto;"></p>
+<p><img src="images/psych.jpg" style="width:80%;margin-left:auto;margin-right:auto;"></p>
 
 </div>
 </div>
